--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,10 +20,10 @@ const posts = unsortedPosts.sort(function (a, b) {
 		<BaseHead title={title} description={description} />
 	</head>
 
-	<body class="bg-light">
+	<body>
 		<Navbar/>
 				<section class="col-md-12 mt-5">
-				<img class="img-fluid" width="100%" height="100%" src={cover}/>
+				<img class="img-fluid" alt={description} width="100%" height="100%" src={cover}/>
 				</section>
 				
 		<div class="container-fluid">
