--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,7 +8,7 @@ export interface Props {
 
 const { title, description } = Astro.props;
 ---
-
+<meta name="google-site-verification" content="4dtv9OQNf-WVMkxotvRSrDdwg1R02GjWZPMGy-TwK1A" />
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
