3 files modified, 1 added

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,6 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import Menu from "../components/Widget.astro";
+import Doc from "../components/Doc.astro";
 
 export interface Props {
 	content: {
@@ -48,6 +49,7 @@ const {
 				</div>
 			</main>
 		</article>
+		<Doc/>
 		<Footer/>
 	</body>
 </html>
