--- a/src/components/Doc.astro
+++ b/src/components/Doc.astro
@@ -1,10 +1,13 @@
 ---
-let title = "Documentation how to work and install this template";
+let title = "DOCUMENTATION";
+let content = "Documentation how to work and install this limousine website template";
 let btn = "Read Documentation";
 let url = "https://www.hockeycomputindo.com/2022/07/limousine-website-template-with-astro.html";
 ---
-<div class="text-center p-3 col-md-12">
-<p>{title}<br/>
+<div class="text-center p-3 p-md-5 col-md-12">
+<div class="p-3 p-md-5 border border-secondary rounded">
+<h3>{title}</h3>
+<p>{content}<br/>
 <a href={url} class="btn btn-outline-dark btn-lg">{btn}</a>
 </p>
 </div>
