--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,8 @@ const posts = unsortedPosts.sort(function (a, b) {
 		<div class="container-fluid">
 			<main class="row mt-5 mb-5">
 			<article class="col-md-12 p-3 p-md-5">
+<h3>GrandLimousine Atlata</h3>
+<p>Grand Limousine Atlanta offers top-tier luxury limousine and car service in Atlanta, perfect for business travel, airport transfers, special events, and more. <a href="https://www.grandlimoatlanta.com">Visit Site →</a></p>
 			<Content/>
 			<section class="row">
 					{posts.map(({ url, frontmatter }) => (
